--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+    <%= render partial:'/layouts/navbar' %>
     <%= yield %>
+    <div class="wrapper style2">
+			<article id="main" class="container special">
+				<p>
+          <%= yield %>
+				</p>
+			</article>
+		</div>
+    <%= render partial: '/layouts/footer' %>
   </body>
 </html>
